--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ jobs:
   create-pr-on-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3.3.0
-      
-    - name: Creates Pull Request
-      uses: emiliopedrollo/create-pull-request@v1.1.0
+    - uses: actions/checkout@1.0.0
+    
+    - name: Automatically Create Pull Requests
+      uses: BaharaJr/create-pr@0.0.1
 
+      with:
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        DESTINATION_BRANCH: "master"
